# returnable_backend

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
E2E_tests/: mock_service.py  test_decorators.py
core/IT_tests/: test_contact_information_agent.py
core/ai_clients/: google_client.py  openai_client.py
core/invoice_extraction/: invoice_image_processing.py
helper_scripts/: supabase_helper.py
returnable-core/IT_tests/: test_invoice_extraction_IT.py
returnable-core/agents/: contact_information_agent.py  mail_agent.py
server/: .env.server  README.md  main.py  requirements.txt  run_server.py
server/app/: __init__.py
server/app/api/v1/: api.py
server/app/core/: config.py
server/cmds/: delete-all-but-the-recent-repo.sh  push-to-digital-ocean-registry.sh  push-to-gcloud-registry.sh
server/core/: __init__.py  config.py
server/core/IT_tests/: test_contact_information_agent.py
server/core/agents/: email_reply_service.py  mail_agent.py
server/core/ai/agents/: agent_consts.py  agent_prompts.py  (+6 more)
server/core/ai_clients/: openai_client.py
server/core/config/: __init__.py  general_config.py  revenuecat_config.py  whatsapp_config.py
server/core/email_service/: gmail_client.py  supabase_client.py
server/core/invoice_extraction/: invoice_image_processing.py  invoice_image_processing_using_openai.py
server/core/jobs/: refresh_mails.py
server/core/models/: __init__.py  reminder_models.py  revenuecat_models.py  whatsapp_models.py
server/core/security/: __init__.py  revenuecat_auth.py  whatsapp_auth.py
(+59 files in other folders)
